--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
     - 7.4
 
 before_script:
-    - composer-install --no-interaction
+    - composer install --no-interaction
     
 script:
     - vendor/bin/phpunit
